feat: add getBalances, getTransactions